Rename classname BEM, add eslint, prettier and stylelint

--- a/src/components/WhoWeAre/styleWhoWeAre.scss
+++ b/src/components/WhoWeAre/styleWhoWeAre.scss
@@ -1,168 +1,168 @@
 .WhoWeAre {
-    position: relative;
-    width: 100%;
-    // height: var(--heightWhoWeAre);
-    background: #232340;
-    background-image: url('../../assets/images/line.svg');
-    background-repeat: no-repeat;
-    padding-bottom: 25rem;
+  position: relative;
+  width: 100%;
+  // height: var(--heightWhoWeAre);
+  background: #232340;
+  background-image: url('../../assets/images/line.svg');
+  background-repeat: no-repeat;
+  padding-bottom: 25rem;
 
-    .WhoWeAre__shape3d {
+  .WhoWeAre__Shape3d {
+    width: 100%;
+    height: 100%;
+    .shape3dIMG {
+      position: absolute;
+      top: -4rem;
+      right: 0;
+      width: 55.7%;
+      img {
         width: 100%;
-        height: 100%;
-        .shape3dIMG {
-            position: absolute;
-            top: -4rem;
-            right: 0;
-            width: 55.7%;
-            img {
-                width: 100%;
-            }
-        }
-        .grid {
-            position: relative;
-        }
-        .taglineNumber {
-            color: var(--colorText);
-        }
-        .taglineContent {
-            color: #FFFFFF;
-        }
-        .CurrentYearMobile {
-            display: none;
-        }
-        .DownIconMobile {
-            display: none;
-        }
-        .WhoWeAre__body {
-            width: 100%;
-            margin-top: 9.4rem;
-            margin-bottom: 17rem;
-            display: flex;
-            justify-content: space-between;
-            .WhoWeAre__body__timeLine {
-                margin: 0;
-                margin-bottom: 6rem;
-                padding: 0;
-                list-style: none;
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                justify-content: space-around;
-    
-                .TimeLineCurrentYear {
-                    position: relative;
-                    color: var(--white);
-                    &:after {
-                        content: "";
-                        display: block;
-                        position: absolute;
-                        top: 0;
-                        left: -8.5rem;
-                        width: 24px;
-                        height: 4px;
-                        background: var(--white);
-                        margin-top: 7px;
-                    }
-                    &:before {
-                        content: "";
-                        display: block;
-                        position: absolute;
-                        top: 0;
-                        left: 7rem;
-                        width: 200px;
-                        height: 16px;
-                        z-index: 1;
-                        background: url('../../assets/images/pointLine.svg');
-                    }
-                }
-            }
-            .WhoWeAre__body__img {
-                position: relative;
-                width: 83%;
-                top: 0;
-                right: 0;
-                img {
-                    width: 100%;
-                }
-            }
-        }
+      }
     }
-    .WhoWeAre__footer {
+    .grid {
+      position: relative;
+    }
+    .Content-Title__Number {
+      color: var(--colorText);
+    }
+    .Content-Title__Caption {
+      color: #ffffff;
+    }
+    .CurrentYearMobile {
+      display: none;
+    }
+    .DownIconMobile {
+      display: none;
+    }
+    .WWA-Body {
+      width: 100%;
+      margin-top: 9.4rem;
+      margin-bottom: 17rem;
+      display: flex;
+      justify-content: space-between;
+      .TimeLine {
+        margin: 0;
+        margin-bottom: 6rem;
+        padding: 0;
+        list-style: none;
         display: flex;
-        justify-content: space-between;
-        .WhoWeAre__footer__content {
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: flex-start;
-            padding-left: 20rem;
-            padding-right: 2rem;
-            .WhoWeAre__footer__content__main {
-                display: flex;
-                flex-direction: column;
-                .WhoWeAre__content__title {
-                    font-size: 3.2rem;
-                    line-height: 4rem;
-                    letter-spacing: -0.5px;
-                    color: #FFFFFF;
-                    text-align: left;
-                    margin: 0;
-                }
-                .WhoWeAre__content__body {
-                    text-align: left;
-                    line-height: 3.2rem;
-                    padding: 4rem 0;
-                }
-            }
-            &:after {
-                content: "";
-                display: block;
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 2px;
-                height: 80px;
-                background: #F1B2CC;
-                border-radius: 1px;
-            }
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+
+        .CurrentYear {
+          position: relative;
+          color: var(--white);
+          &:after {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0;
+            left: -8.5rem;
+            width: 24px;
+            height: 4px;
+            background: var(--white);
+            margin-top: 7px;
+          }
+          &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 7rem;
+            width: 200px;
+            height: 16px;
+            z-index: 1;
+            background: url('../../assets/images/pointLine.svg');
+          }
         }
+      }
+      .WWA-Body__Img {
+        position: relative;
+        width: 83%;
+        top: 0;
+        right: 0;
+        img {
+          width: 100%;
+        }
+      }
     }
+  }
+  .WWA-Content {
+    display: flex;
+    justify-content: space-between;
+    .Content-Box {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      padding-left: 20rem;
+      padding-right: 2rem;
+      .Content-WWA {
+        display: flex;
+        flex-direction: column;
+        .Content-WWA__Title {
+          font-size: 3.2rem;
+          line-height: 4rem;
+          letter-spacing: -0.5px;
+          color: #ffffff;
+          text-align: left;
+          margin: 0;
+        }
+        .Content-WWA__Text {
+          text-align: left;
+          line-height: 3.2rem;
+          padding: 4rem 0;
+        }
+      }
+      &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 2px;
+        height: 80px;
+        background: #f1b2cc;
+        border-radius: 1px;
+      }
+    }
+  }
 }
 
 /*Mobile*/
 @media (min-width: 0) and (max-width: 739px) {
-    .WhoWeAre {
-        .WhoWeAre__shape3d {
-            .shape3dIMG {
-                display: none;
-            }
-            .WhoWeAre__body {
-                margin-bottom: 56px;
-                .WhoWeAre__body__timeLine {
-                    display: none;
-                }
-                .WhoWeAre__body__img {
-                    width: 100%;
-                }
-            }
-            .WhoWeAre__footer {
-                flex-direction: column;
-                align-items: flex-start;
-                .WhoWeAre__footer__content {
-                    padding: 0;
-                    &:after {
-                        display: none;
-                    }
-                }
-                .Number {
-                    align-self: center;
-                    border-radius: 260px;
-                    box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1);
-                    margin-top: 50px;
-                }
-            }
+  .WhoWeAre {
+    .WhoWeAre__Shape3d {
+      .shape3dIMG {
+        display: none;
+      }
+      .WWA-Body {
+        margin-bottom: 56px;
+        .TimeLine {
+          display: none;
         }
+        .WWA-Body__Img {
+          width: 100%;
+        }
+      }
+      .WWA-Content {
+        flex-direction: column;
+        align-items: flex-start;
+        .Content-Box {
+          padding: 0;
+          &:after {
+            display: none;
+          }
+        }
+        .Number {
+          align-self: center;
+          border-radius: 260px;
+          box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1);
+          margin-top: 50px;
+        }
+      }
     }
+  }
 }
