--- a/src/components/Footer/styleFooter.scss
+++ b/src/components/Footer/styleFooter.scss
@@ -1,252 +1,251 @@
 .Footer {
-    width: 100%;
-    background-color: var(--white);
-    background-image: url('../../assets/images/ServicesBg.svg');
-    background-color: linear-gradient(360deg, rgba(255, 255, 255, 0.0001) 0%, rgba(237, 229, 240, 0.504289), 100%);
+  width: 100%;
+  background-color: var(--white);
+  background-image: url('../../assets/images/ServicesBg.svg');
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .Contact {
+    width: 95%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    .Footer__Contact {
-        width: 95%;
+    border-radius: 40px;
+    background-color: var(--primaryColor);
+    .Contact__Top {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 11rem 0;
+      color: #ffffff;
+      justify-content: space-around;
+      position: relative;
+      .Headline__logo {
+        padding: 2px;
+        width: auto;
+        height: auto;
+        top: 0;
+        left: 0;
+        background-color: #c897e4;
+        border-radius: 8px;
+        margin-bottom: 2rem;
+      }
+      h2 {
+        font-weight: 700;
+        font-size: 3.2rem;
+        line-height: 4rem;
+        text-align: center;
+        letter-spacing: -0.5px;
+        max-width: 57rem;
+      }
+      &:after {
+        content: '';
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 1px;
+        mix-blend-mode: normal;
+        opacity: 0.2;
+        border: 1px solid #ffffff;
+        bottom: 0;
+        left: 0;
+      }
+    }
+    .Contact__Bottom {
+      display: flex;
+      justify-content: space-around;
+      color: #ffffff;
+      padding: 17rem 0;
+      position: relative;
+      .Contact__Bottom--Left {
+        font-weight: 700;
+        font-size: 6.4rem;
+        line-height: 7.2rem;
+        letter-spacing: -0.5px;
+        max-width: 37rem;
+        text-align: left;
+        .button--primary {
+          display: none;
+        }
+      }
+      .Contact__Bottom--Right {
         display: flex;
         flex-direction: column;
-        border-radius: 40px;
-        background-color: var(--primaryColor);
-        .Footer__Contact__Top {
+        align-items: flex-start;
+        p {
+          font-weight: 700;
+          font-size: 3.2rem;
+          line-height: 4rem;
+          letter-spacing: -0.5px;
+          max-width: 37rem;
+          text-align: left;
+        }
+      }
+      &:after {
+        content: '';
+        position: absolute;
+        display: block;
+        width: 1px;
+        height: 100%;
+        mix-blend-mode: normal;
+        opacity: 0.2;
+        border: 1px solid #ffffff;
+        top: 0;
+        left: 50%;
+      }
+    }
+  }
+  .Footer-Content {
+    width: 100%;
+    .grid {
+      display: flex;
+      flex-direction: column;
+      .Footer-Content-Top {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 12.8rem;
+        .Footer-Content-Top__para {
+          max-width: 56rem;
+          font-weight: 400;
+          font-size: 1.8rem;
+          line-height: 3.2rem;
+          text-align: center;
+          margin: 5rem 0;
+        }
+        .Nav-menu {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding: 0;
+          margin: 0;
+          font-weight: 600;
+          .Nav-menu__item {
+            list-style: none;
+            line-height: 2.5rem;
+            margin: 0 3.2rem 5rem;
+            &:hover {
+              cursor: pointer;
+            }
+            &:first-child {
+              color: var(--primaryColor);
+            }
+          }
+        }
+      }
+      .Footer-Social {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 3.2rem 0;
+        position: relative;
+        .Footer-Social__Left {
+          font-weight: 600;
+          font-size: 1.4rem;
+          line-height: 1.8rem;
+          color: #adadad;
+        }
+        .Footer-Social__Right {
+          display: flex;
+          justify-content: space-between;
+          span {
+            font-weight: 600;
+            font-size: 1.4rem;
+            line-height: 1.8rem;
+            color: var(--primaryColor);
+          }
+          .Social__ListIcon {
+            padding: 0;
+            margin: 0;
             display: flex;
-            flex-direction: column;
+            justify-content: space-between;
             align-items: center;
-            padding: 11rem 0;
-            color: #FFFFFF;
-            justify-content: space-around;
-            position: relative;
-            .Headline__logo {
-                padding: 2px;
-                width: auto;
-                height: auto;
-                top: 0;
-                left: 0;
-                background-color: #C897E4;
-                border-radius: 8px;
-                margin-bottom: 2rem;
+            .Social__Icon {
+              list-style: none;
+              margin-left: 4rem;
             }
-            h2 {
-                font-weight: 700;
-                font-size: 3.2rem;
-                line-height: 4rem;
-                text-align: center;
-                letter-spacing: -0.5px;
-                max-width: 57rem;
-            }
-            &:after {
-                content: '';
-                position: absolute;
-                display: block;
-                width: 100%;
-                height: 1px;
-                mix-blend-mode: normal;
-                opacity: 0.2;
-                border: 1px solid #FFFFFF;
-                bottom: 0;
-                left: 0;
-            }
+          }
         }
-        .Footer__Contact__Bottom {
-            display: flex;
-            justify-content: space-around;
-            color: #FFFFFF;
-            padding: 17rem 0;
-            position: relative;
-            .Footer__Contact__BottomLeft {
-                font-weight: 700;
-                font-size: 6.4rem;
-                line-height: 7.2rem;
-                letter-spacing: -0.5px;
-                max-width: 37rem;
-                text-align: left;
-                .button-primary {
-                    display: none;
-                }
-            }
-            .Footer__Contact__BottomRight {
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                p {
-                    font-weight: 700;
-                    font-size: 3.2rem;
-                    line-height: 4rem;
-                    letter-spacing: -0.5px;
-                    max-width: 37rem;
-                    text-align: left;
-                }
-            }
-            &:after {
-                content: '';
-                position: absolute;
-                display: block;
-                width: 1px;
-                height: 100%;
-                mix-blend-mode: normal;
-                opacity: 0.2;
-                border: 1px solid #FFFFFF;
-                top: 0;
-                left: 50%;
-            }
+        &:after {
+          content: '';
+          position: absolute;
+          display: block;
+          width: 100%;
+          height: 1px;
+          background: #d8d8d8;
+          top: 0;
+          left: 0;
         }
+      }
     }
-    .Footer__Content {
-        width: 100%;
-        .grid {
-            display: flex;
-            flex-direction: column;
-            .Footer__Content__Top {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                margin-top: 12.8rem;
-                .Footer__Content__Top__para {
-                    max-width: 56rem;
-                    font-weight: 400;
-                    font-size: 1.8rem;
-                    line-height: 3.2rem;
-                    text-align: center;
-                    margin: 5rem 0;
-                }
-                .Nav__menu {
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;
-                    padding: 0;
-                    margin: 0;
-                    font-weight: 600;
-                    .Nav__menu-item {   
-                        list-style: none;
-                        line-height: 2.5rem;
-                        margin: 0 3.2rem 5rem;
-                        &:hover {
-                            cursor: pointer;
-                        }
-                        &:first-child {
-                            color: var(--primaryColor);
-                        }
-                    }
-                }
-            }
-            .Footer__Content__Social {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                padding: 3.2rem 0;
-                position: relative;
-                .Footer__Content__Social__Left {
-                    font-weight: 600;
-                    font-size: 1.4rem;
-                    line-height: 1.8rem;
-                    color: #ADADAD;
-                }
-                .Footer__Content__Social__Right {
-                    display: flex;
-                    justify-content: space-between;
-                    span {
-                        font-weight: 600;
-                        font-size: 1.4rem;
-                        line-height: 1.8rem;
-                        color: var(--primaryColor);
-                    }
-                    .Social__ListIcon {
-                        padding: 0;
-                        margin: 0;
-                        display: flex;
-                        justify-content: space-between;
-                        align-items: center;
-                        .Social__Icon {
-                            list-style: none;
-                            margin-left: 4rem;
-                        }
-                    }
-                }
-                &:after {
-                    content: '';
-                    position: absolute;
-                    display: block;
-                    width: 100%;
-                    height: 1px;
-                    background: #D8D8D8;
-                    top: 0;
-                    left: 0;
-                }
-            }
-        }
-    }
+  }
 }
 
 /*Mobile*/
 @media (min-width: 0) and (max-width: 739px) {
-    .Footer {
-        padding-top: 10rem;
-        .Footer__Contact {
+  .Footer {
+    padding-top: 10rem;
+    .Contact {
+      width: 100%;
+      max-width: 311px;
+      margin: 0 auto;
+      border-radius: 24px;
+      .Contact__Top {
+        padding: 50px 0;
+        h2 {
+          font-weight: 600;
+          font-size: 18px;
+          line-height: 24px;
+          text-align: center;
+        }
+      }
+      .Contact__Bottom {
+        padding: 40px 0;
+        .Contact__Bottom--Left {
+          p {
+            font-weight: 700;
+            font-size: 32px;
+            line-height: 40px;
+            text-align: center;
+          }
+          .button--primary {
+            display: block;
+            background-color: #ffffff;
             width: 100%;
-            max-width: 311px;
-            margin: 0 auto;
-            border-radius: 24px;
-            .Footer__Contact__Top {
-                padding: 50px 0;
-                h2 {
-                    font-weight: 600;
-                    font-size: 18px;
-                    line-height: 24px;
-                    text-align: center;
-                }
+            .Recent-Works {
+              color: var(--primaryColor);
             }
-            .Footer__Contact__Bottom {
-                padding: 40px 0;
-                .Footer__Contact__BottomLeft {
-                    p {
-                        font-weight: 700;
-                        font-size: 32px;
-                        line-height: 40px;
-                        text-align: center;
-                    }
-                    .button-primary {
-                        display: block;
-                        background-color: #FFFFFF;
-                        width: 100%;
-                        .Recent-Works {
-                            color: var(--primaryColor);
-                        }
-                    }
-                }
-                .Footer__Contact__BottomRight {
-                    display: none;
-                }
-                &:after {
-                    display: none;
-                }
-            }
+          }
         }
-        .Footer__Content .grid .Footer__Content__Top .Nav__menu {
-            display: none;
+        .Contact__Bottom--Right {
+          display: none;
         }
-        .Footer__Content .grid .Footer__Content__Social {
-            flex-direction: column-reverse;
-            .Footer__Content__Social__Right {
-                span {
-                    display: none;
-                }
-                .Social__ListIcon {
-                    margin: 30px 0;
-                    .Social__Icon {
-                        margin: 0 20px;
-                    }
-                }
-            }
-            .Footer__Content__Social__Left {
-                margin-bottom: 20px;
-            }
-            &:after {
-                display: none;
-            }
+        &:after {
+          display: none;
         }
+      }
     }
+    .Footer-Content .grid .Footer-Content-Top .Nav-menu {
+      display: none;
+    }
+    .Footer-Content .grid .Footer-Social {
+      flex-direction: column-reverse;
+      .Footer-Social__Right {
+        span {
+          display: none;
+        }
+        .Social__ListIcon {
+          margin: 30px 0;
+          .Social__Icon {
+            margin: 0 20px;
+          }
+        }
+      }
+      .Footer-Social__Left {
+        margin-bottom: 20px;
+      }
+      &:after {
+        display: none;
+      }
+    }
+  }
 }
