--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -2,205 +2,226 @@
 @import url('http://fonts.cdnfonts.com/css/sf-pro-display');
 
 :root {
-    --white: #fff;
-    --colorText: #8B8B8B;
-    --heightHeader: 1024px;
-    --heightWhoWeAre: 1710px;
-    --distancePrimary: 13.5rem;
-    --black: #000;
-    --heightServices: 2124px;
-    --primaryColor: #5468E7;
-    --heightWorks: 3232px;
-    --heightCTA: 976px;
+  --white: #fff;
+  --colorText: #8b8b8b;
+  --heightHeader: 1024px;
+  --heightWhoWeAre: 1710px;
+  --distancePrimary: 13.5rem;
+  --black: #000;
+  --heightServices: 2124px;
+  --primaryColor: #5468e7;
+  --heightWorks: 3232px;
+  --heightCTA: 976px;
 }
 
 * {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
+/*Variable font size and line height text*/
+$fontSize: 1.8rem;
+$lineHeight: 1.4rem;
+
 html {
-    font-size: 62.5%;
-    color: var(--colorText);
-    background-color: var(--white);
-    box-sizing: border-box;
+  font-size: 62.5%;
+  color: var(--colorText);
+  background-color: var(--white);
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'SF Pro Display', sans-serif;                                  
+  font-family: 'SF Pro Display', sans-serif;
+  font-size: $fontSize;
+  line-height: $lineHeight;
+  text-rendering: optimizeSpeed;
+  text-align: center;
+}
+
+.button--primary {
+  width: 18rem;
+  height: 6.4rem;
+  /* color/dark */
+  border: 0px;
+  background: var(--primaryColor);
+  border-radius: 8px;
+
+  &:hover {
+    background: #7483e5;
+    cursor: pointer;
+  }
+  .Recent-Works {
+    font-weight: bold;
+    left: 24.44%;
+    right: 24.44%;
+    color: #ffffff;
     font-size: 1.8rem;
-    line-height: 1.4rem;
-    text-rendering: optimizeSpeed;
-    text-align: center;
-}
-
-.grid {
-    width: 100%;
-    max-width: 1170px;
-    margin:0 auto;
-}
-
-.button-primary {
-    width: 18rem;
-    height: 6.4rem;   
-    /* color/dark */
-    border: 0px;
-    background: var(--primaryColor);
-    border-radius: 8px;
-
-    &:hover {
-        background: #7483e5;
-        cursor: pointer;
-    }
-    .Recent-Works {
-        font-weight: bold;
-        font-size: 1.8rem;
-        left: 24.44%;
-        right: 24.44%;
-        color: #FFFFFF;
-    }
+  }
 }
 
 .Number {
-    padding: 8rem;
-    .Number__head {
-        margin: 0;
-        font-size: 20rem;
-        line-height: 18rem;
-        text-align: center;
-        color: #FFFFFF;
-    }
-    .Number__content {
-        margin: 0;
-        font-size: 2.4rem;
-        line-height: 3rem;
-        font-style: normal;
-        font-weight: 700;
-        text-align: center;
-        letter-spacing: -0.2px;
-        color: #FFFFFF;
-    }
+  padding: 8rem;
+  .Number__head {
+    margin: 0;
+    font-size: 20rem;
+    line-height: 18rem;
+    text-align: center;
+    color: #ffffff;
+  }
+  .Number__content {
+    margin: 0;
+    font-size: 2.4rem;
+    line-height: 3rem;
+    font-style: normal;
+    font-weight: 700;
+    text-align: center;
+    letter-spacing: -0.2px;
+    color: #ffffff;
+  }
 }
 
 .Headline {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 12.8rem;
+  .Headline__logo {
+    padding: 6px;
+    width: auto;
+    height: auto;
+    top: 0;
+    left: 0;
+    align-self: flex-start;
+    background-color: var(--primaryColor);
+    border-radius: 8px;
+  }
+  .Content {
     display: flex;
-    justify-content: space-between;
-    padding-top: 12.8rem;
-    .Headline__logo {
-        padding: 6px;
-        width: auto;
-        height: auto;
-        top: 0;
-        left: 0;
-        align-self: flex-start;
-        background-color: var(--primaryColor);
-        border-radius: 8px;
-    }
-    .Headline__content {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
 
-        .Headline__content__tagline {
-            font-weight: 600;
-            line-height: 2.4rem;
-            font-style: normal;
-            margin-bottom: 2.4rem;
-            color: var(--primaryColor);
-            .taglineContent {
-                margin-left: 2.4rem;
-            }
-        }
-        .Headline__content__para {
-            font-weight: 700;
-            font-size: 6.4rem;
-            line-height: 7.2rem;
-            /* or 112% */
-            margin: 0;
-            letter-spacing: -0.5px;
-            
-            /* color/white */
-            
-            color: #FFFFFF;
-            width: 66rem;
-            text-align: left;
-        }
+    .Content-Title {
+      font-weight: 600;
+      line-height: 2.4rem;
+      font-style: normal;
+      margin-bottom: 2.4rem;
+      color: var(--primaryColor);
+      .Content-Title__Caption {
+        margin-left: 2.4rem;
+      }
     }
-    .Headline__Arrow {
-        margin-top: 5.4rem;
-        img {
-            width: auto;
-            height: auto;
-            top: 0;
-            left: 0;
-        }
-        &:hover {
-            cursor: pointer;
-        }
+    .Content__Text {
+      font-weight: 700;
+      font-size: 6.4rem;
+      line-height: 7.2rem;
+      /* or 112% */
+      margin: 0;
+      letter-spacing: -0.5px;
+
+      /* color/white */
+
+      color: #ffffff;
+      width: 66rem;
+      text-align: left;
     }
+  }
+  .Arrow-Btn__Box {
+    margin-top: 5.4rem;
+    img {
+      width: auto;
+      height: auto;
+      top: 0;
+      left: 0;
+    }
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
 
 /* Responsive */
-@media (min-width: 1025px) and (max-width: 1250px) {
-    .grid {
-        max-width: 1000px
-    }
+$widthContainerDesktop: 1170px;
+.grid {
+  width: 100%;
+  max-width: $widthContainerDesktop;
+  margin: 0 auto;
+}
+/*Declare Variable for responsive*/
+
+$widthContainerMiniDesktop: 1000px;
+$widthContainerTablet: 811px;
+$widthContainerMiniTablet: 700px;
+$widthContainerMobile: 311px;
+
+$MaxWidthMiniDesktop: 1250px;
+$MaxWidthTablet: 1024px;
+$MaxWidthMiniTablet: 849px;
+$MaxWidthMobile: 739px;
+
+/*Mini Desktop*/
+@media (min-width: ($MaxWidthTablet + 1)) and (max-width: $MaxWidthMiniDesktop) {
+  .grid {
+    max-width: $widthContainerMiniDesktop;
+  }
 }
 /*Tablet*/
-@media (min-width: 850px) and  (max-width: 1024px) {
-    html {
-        font-size: 50%;
-    }
-    .grid {
-        max-width: 810px;
-    }
+@media (min-width: ($MaxWidthMiniTablet + 1)) and (max-width: $MaxWidthTablet) {
+  html {
+    font-size: 50%;
+  }
+  .grid {
+    max-width: $widthContainerTablet;
+  }
 }
 
-@media (min-width: 740px) and  (max-width: 849px) {
-    html {
-        font-size: 45%;
-    }
-    .grid {
-        max-width: 700px;
-    }
+@media (min-width: ($MaxWidthMobile + 1)) and (max-width: $MaxWidthMiniTablet) {
+  html {
+    font-size: 45%;
+  }
+  .grid {
+    max-width: $widthContainerMiniTablet;
+  }
 }
 /*Mobile*/
-@media (min-width: 0) and (max-width: 739px) {
-    html {
-        font-size: 45%;
+@media (min-width: 0) and (max-width: $MaxWidthMobile) {
+  html {
+    font-size: 45%;
+  }
+  .grid {
+    max-width: $widthContainerMobile;
+  }
+  .Headline {
+    flex-direction: column;
+    align-items: flex-start;
+    .Headline__logo {
+      display: none;
     }
-    .grid {
-        max-width: 311px;
+    .Content {
+      .Content__Text {
+        width: 80%;
+        font-size: 40px;
+        line-height: 48px;
+      }
     }
-    .Headline {
-        flex-direction: column;
-        align-items: flex-start;
-        .Headline__logo {
-            display: none;
-        }
-        .Headline__content {
-            .Headline__content__para {
-                width: 80%;
-                font-size: 40px;
-                line-height: 48px;
-            }
-        }
-        .Headline__Arrow {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            align-items: center;
-            .CurrentYearMobile {
-                display: inline-block;
-                font-weight: 600;
-                font-size: 16px;
-                line-height: 18px;
-                color: #FFFFFF;
-            }
-            .DownIconMobile {
-                display: inline-block;
-            }
-        }
+    .Arrow-Btn {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      align-items: center;
+      margin-top: 30px;
+      .Arrow-Btn__Box {
+        margin: unset;
+      }
+      .CurrentYearMobile {
+        display: inline-block;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 18px;
+        color: #ffffff;
+      }
+      .DownIconMobile {
+        display: inline-block;
+      }
     }
+  }
 }
