--- a/src/components/Header/styleHeader.scss
+++ b/src/components/Header/styleHeader.scss
@@ -1,218 +1,219 @@
 .Header {
-    width: 100%;
-    // height: var(--heightHeader);
-    left: 0px;
-    top: 0px;
-    background-image: url('../../assets/images/HeaderBg.svg');
-    padding-bottom: 25rem;
-    
-    .Navigation {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 6.4rem 7.2rem 0px;
+  width: 100%;
+  // height: var(--heightHeader);
+  left: 0px;
+  top: 0px;
+  background-image: url('../../assets/images/HeaderBg.svg');
+  padding-bottom: 25rem;
 
-        .Nav__logo {
-            padding: 12px 0px;
-        }
+  .Navigation {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 6.4rem 7.2rem 0px;
 
-        .Nav__menu {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: relative;
-            padding: 0;
-            margin: 0;
-            font-weight: 600;
-    
-            .Nav__menu-item {   
-                list-style: none;
-                line-height: 2.5rem;
-                padding: 1.5rem 3.2rem;
-                &:hover {
-                    cursor: pointer;
-                }
-            }
-
-            .Nav__menu-item:first-child {
-                color: var(--primaryColor);
-            }
-            
-            .Nav__notify {
-                position: absolute;
-                right: 0;
-                top: 0;
-                padding: 3px 8px;
-                border-radius: 10px;
-                font-size: 1.4rem;
-                line-height: 1.4rem;
-                color: var(--white);
-                background: linear-gradient(180deg, #3A8FFF 0%, #0837AE 100%);
-            }
-        }
-        .button-primary {
-            background: #232340;
-            &:hover {
-                background: #3a3a64;
-                cursor: pointer;
-            }
-        }
-        .Nav__BurgerIcon {
-            display: none;
-        }
+    .Nav__logo {
+      padding: 12px 0px;
     }
 
-    .Header__Container {
-        position: relative;
-        margin-top: 9.4rem; 
-        height: 100%;
-        display: flex;
+    .Navbar-menu {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: relative;
+      padding: 0;
+      margin: 0;
+      font-weight: 600;
 
-        .Header__HeroBG {
-            position: absolute;
-            top: 0;
-            right: 0;
-            width: 49%;
-            img {
-                width: 100%;
-            }
+      .Navbar-menu__item {
+        list-style: none;
+        line-height: 2.5rem;
+        padding: 1.5rem 3.2rem;
+        &:hover {
+          cursor: pointer;
         }
-        .Header__HeroImg {
-            position: absolute;
-            top: 8rem;
-            right: 6rem;
-            width: 61%;
-            img {
-                width: 100%;
-            }
-        }
-        .Header__HeroContent {
-            width: 35%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            align-items: flex-start;
+      }
 
-            .Header__HeroContent__main {
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
+      .Navbar-menu__item:first-child {
+        color: var(--primaryColor);
+      }
 
-                .Header__HeroContent__title {
-                    margin: 0;
-                    text-align: start;
-                    font-weight: 700;
-                    font-size: 8.4rem;
-                    line-height: 10rem;
-                    letter-spacing: -1px;
-                    color: #232340;
-                }
-                .Header__HeroContent__content {
-                    width: 90%;
-                    text-align: start;
-                    font-weight: 400;
-                    margin: 4rem 0 4.8rem;
-                    line-height: 3.2rem;
-                    color: #606060;
-                }
-            }
-        }
-        .Header__ScrollDownIcon {
-            position: absolute;
-            bottom: -32%;
-            left: 0 ;
-            height: auto;
-            width: auto;
-            vertical-align: bottom;
-            object-fit: cover;
-            display: flex;
-            align-items: center;
-            span {
-                margin-left: 16px;
-            }
-        }
+      .Nav__notify {
+        position: absolute;
+        right: 0;
+        top: 0;
+        padding: 3px 8px;
+        border-radius: 10px;
+        font-size: 1.4rem;
+        line-height: 1.4rem;
+        color: var(--white);
+        background: linear-gradient(180deg, #3a8fff 0%, #0837ae 100%);
+      }
     }
+    .button-primary {
+      background: #232340;
+      &:hover {
+        background: #3a3a64;
+        cursor: pointer;
+      }
+    }
+    .Nav__BurgerIcon {
+      display: none;
+    }
+  }
+
+  .Header-Container {
+    position: relative;
+    margin-top: 9.4rem;
+    height: 100%;
+    display: flex;
+
+    .HeroBG {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 49%;
+      img {
+        width: 100%;
+      }
+    }
+    .HeroImg {
+      position: absolute;
+      top: 8rem;
+      right: 6rem;
+      width: 61%;
+      img {
+        width: 100%;
+      }
+    }
+    .HeroContent {
+      width: 35%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: flex-start;
+
+      .HeroContent-main {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        .HeroContent__title {
+          margin: 0;
+          text-align: start;
+          font-weight: 700;
+          font-size: 8.4rem;
+          line-height: 10rem;
+          letter-spacing: -1px;
+          color: #232340;
+        }
+        .HeroContent__para {
+          width: 90%;
+          text-align: start;
+          font-weight: 400;
+          margin: 4rem 0 4.8rem;
+          line-height: 3.2rem;
+          color: #606060;
+        }
+      }
+    }
+    .ScrollDownIcon {
+      position: absolute;
+      bottom: -32%;
+      left: 0;
+      height: auto;
+      width: auto;
+      vertical-align: bottom;
+      object-fit: cover;
+      display: flex;
+      align-items: center;
+      span {
+        margin-left: 16px;
+      }
+    }
+  }
 }
 
 /* Responsive */
 @media (min-width: 1025px) and (max-width: 1250px) {
-    .Header .Header__Container .Header__ScrollDownIcon {
-        bottom: -19%;
-    }
+  .Header .Header-Container .ScrollDownIcon {
+    bottom: -19%;
+  }
 }
 /*Tablet*/
-@media (min-width: 850px) and  (max-width: 1024px) {
-    .Header {
-        .Header__Container {
-            .Header__HeroBG {
-                width: 52%;
-            }
-            .Header__HeroImg {
-                width: 64%;
-            }
-            .Header__HeroContent {
-                width: 40%;
-                .Header__HeroContent__main {
-                    .Header__HeroContent__content {
-                        width: 80%;
-                    }
-                }
-            }
-            .Header__ScrollDownIcon {
-                bottom: -23%;
-            }
+@media (min-width: 850px) and (max-width: 1024px) {
+  .Header {
+    .Header-Container {
+      .HeroBG {
+        width: 52%;
+      }
+      .HeroImg {
+        width: 64%;
+      }
+      .HeroContent {
+        width: 40%;
+        .HeroContent-main {
+          .HeroContent__para {
+            width: 80%;
+          }
         }
+      }
+      .ScrollDownIcon {
+        bottom: -23%;
+      }
     }
+  }
 }
 /*Mobile*/
 @media (min-width: 0) and (max-width: 739px) {
-    .Header {
-        padding-bottom: 85%;
-        margin-bottom: 64px;
-        position: relative;
-        overflow-x: hidden;
-        .Navigation {
-            padding: 52px 32px 0px;
-            // position: fixed;
-            .Nav__menu, .button-primary {
-                display: none;
-            }
-            .Nav__BurgerIcon {
-                display: block;
-            }
-        }
-        .Header__Container {
-            margin-top: 44px;
-            position: unset;
-            .Header__HeroContent {
-                z-index: 1;
-                width: 100%;
-                .Header__HeroContent__main {
-                    .Header__HeroContent__title {
-                        font-size: 7.4rem;
-                        line-height: 8rem;
-                    }
-                    .Header__HeroContent__content {
-                        width: 75%;
-                        margin: 24px 0;
-                    }
-                }
-            }
-            .Header__ScrollDownIcon {
-                display: none;
-            }
-            .Header__HeroBG {
-                top: unset;
-                bottom: 0;
-                width: 76%;
-                right: -18%;
-            }
-            .Header__HeroImg {
-                top: unset;
-                bottom: 6%;
-                right: -7%;
-                width: 90%;
-            }
-        }
+  .Header {
+    padding-bottom: 85%;
+    margin-bottom: 64px;
+    position: relative;
+    overflow-x: hidden;
+    .Navigation {
+      padding: 52px 32px 0px;
+      // position: fixed;
+      .Navbar-menu,
+      .button--primary {
+        display: none;
+      }
+      .Nav__BurgerIcon {
+        display: block;
+      }
     }
+    .Header-Container {
+      margin-top: 44px;
+      position: unset;
+      .HeroContent {
+        z-index: 1;
+        width: 100%;
+        .HeroContent-main {
+          .HeroContent__title {
+            font-size: 7.4rem;
+            line-height: 8rem;
+          }
+          .HeroContent__para {
+            width: 75%;
+            margin: 24px 0;
+          }
+        }
+      }
+      .ScrollDownIcon {
+        display: none;
+      }
+      .HeroBG {
+        top: unset;
+        bottom: 0;
+        width: 76%;
+        right: -18%;
+      }
+      .HeroImg {
+        top: unset;
+        bottom: 6%;
+        right: -7%;
+        width: 90%;
+      }
+    }
+  }
 }
