--- a/src/components/Services/styleServices.scss
+++ b/src/components/Services/styleServices.scss
@@ -1,252 +1,256 @@
 .Services {
-    width: 100%;
-    // height: var(--heightServices);
+  width: 100%;
+  // height: var(--heightServices);
+  background-color: var(--white);
+  background-image: url('../../assets/images/ServicesBg.svg');
+  background-color: linear-gradient(360deg, rgba(255, 255, 255, 0.0001) 0%, rgba(237, 229, 240, 0.504289), 100%);
+  background-repeat: no-repeat;
+  padding-bottom: 20rem;
+  .Headline {
+    .Content {
+      .Content-Title,
+      .Content-Title__Caption {
+        color: var(--primaryColor);
+      }
+      .Content__Text {
+        color: #232340;
+      }
+    }
+  }
+
+  .Services__Cards {
+    position: relative;
+  }
+
+  .Card__icon {
+    display: inline-block;
+  }
+
+  .Card {
+    display: flex;
     background-color: var(--white);
-    background-image: url('../../assets/images/ServicesBg.svg');
-    background-color: linear-gradient(360deg, rgba(255, 255, 255, 0.0001) 0%, rgba(237, 229, 240, 0.504289), 100%);
-    background-repeat: no-repeat;
-    padding-bottom: 20rem;
-    .Headline {
-        .Headline__content {
-            .Headline__content__tagline, .taglineContent {
-                color:var(--primaryColor);
-            }
-            .Headline__content__para {
-                color:#232340;
-            }
-        }
-    }
+    border: 3px solid #ffffff;
+    border-radius: 48px;
+    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
+    justify-content: space-around;
+    margin-top: 14rem;
 
-    .Services__Cards {
-        position: relative;
-    }
-
-    .Services__Card__icon {
-        display: inline-block;
-    }
-
-    .Services__Card {
+    &.content {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      margin-top: 0;
+      .Card__Box,
+      .Card__Current {
         display: flex;
-        background-color: var(--white);
-        border: 3px solid #FFFFFF;
-        border-radius: 48px;
-        box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
-        justify-content: space-around;
-        margin-top: 14rem;
-
-        &.content {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            margin-top: 0;
-            .Services__Card_Box, .Services__Card__Current {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-            }
-        }
-
-        .Services__Card_Box {
-            flex: 1;
-            height: 480px;
-            flex-direction: column;
-            border-radius: 48px;
-            background-color: var(--white);
-            
-            .Services__Card__name {
-                margin: 0;
-                margin-top: 4rem;
-                display: block;
-                color: var(--primaryColor);
-            }
-            &:hover:not(.Services__Card__Current) {
-                cursor: pointer;
-                background-color: #838FDD;
-            }
-        }
-        .Services__Card_Box--active {
-            position: relative;
-            box-sizing: content-box;
-            .Services__Card__Current {
-                z-index: 1;
-                width: calc(100% + 4rem);
-                height: calc(100% + 4rem);
-                margin-top: -2rem;
-                margin-left: -2rem;
-                border-radius: 48px;
-                background: var(--primaryColor);
-                text-align: center;
-                .Services__Card__name {
-                    margin: 0;
-                    margin-top: 3.3rem;
-                    color: #FFFFFF;
-                }
-            }
-        }
-    }
-    .Services__Achievement {
-        width: 100%;
-        background-image: url('../../assets/images/Oval.svg');
-        background-repeat: no-repeat;
-        background-position: center left;
-        background-size: 40%;
-        // background-position-x: 10rem;
-        margin-top: 29rem;
-        display: flex;
-        justify-content: space-between;
+        flex-direction: column;
         align-items: center;
-        .ImgPhone {
-            width: 85%;
-            margin-left: -10rem;
-            margin-bottom: 5rem;
-            img {
-                width: 100%;
-            }
-        }
-        .Services__Achievement__content {     
-            // width: 60%; 
-            // margin-left: 50%;   
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;     
-            .Achievement__Headline {
-                position: relative;
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-    
-                .Achievement__Headline__Head {
-                    display: flex;
-                    align-items: center;
-                    img {
-                        padding: 6px;
-                        border-radius: 8px;
-                        background-color: var(--primaryColor);
-                    }
-                    .Headline__content__tagline {
-                        margin-left: 8rem;
-                        .taglineNumber {
-                            font-weight: 600;
-                            line-height: 2.4rem;
-                        }
-                        .taglineContent {
-                            font-weight: 600;
-                            font-size: 1.8rem;
-                            line-height: 2.4rem;
-                            margin-left: 2.4rem;
-                            color: #232340;
-                        }
-                    }
-                }
-                .Headline__content__para {
-                    text-align: left;
-                    font-weight: 700;
-                    font-size: 3.2rem;
-                    line-height: 4rem;
-                    /* or 125% */
-                    color: #000;
-                    letter-spacing: -0.5px;
-                }
-            }
-            .Number {
-                padding-left: 0;
-                .Number__head {
-                    color: var(--primaryColor);
-                    line-height: 24rem;
-                }
-                .Number__content {
-                    color: var(--black)
-                }
-            }
-        }
+        justify-content: center;
+      }
     }
+
+    .Card__Box {
+      flex: 1;
+      height: 480px;
+      flex-direction: column;
+      border-radius: 48px;
+      background-color: var(--white);
+
+      .Card__name {
+        margin: 0;
+        margin-top: 4rem;
+        display: block;
+        color: var(--primaryColor);
+      }
+      &:hover:not(.Card__Current) {
+        cursor: pointer;
+        background-color: #838fdd;
+      }
+    }
+    .Card__Box--active {
+      position: relative;
+      box-sizing: content-box;
+      .Card__Current {
+        z-index: 1;
+        width: calc(100% + 4rem);
+        height: calc(100% + 4rem);
+        margin-top: -2rem;
+        margin-left: -2rem;
+        border-radius: 48px;
+        background: var(--primaryColor);
+        text-align: center;
+        .Card__name {
+          margin: 0;
+          margin-top: 3.3rem;
+          color: #ffffff;
+        }
+      }
+    }
+  }
+  .Services__Achievement {
+    width: 100%;
+    background-image: url('../../assets/images/Oval.svg');
+    background-repeat: no-repeat;
+    background-position: center left;
+    background-size: 40%;
+    // background-position-x: 10rem;
+    margin-top: 29rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .ImgPhone {
+      width: 85%;
+      margin-left: -10rem;
+      margin-bottom: 5rem;
+      img {
+        width: 100%;
+      }
+    }
+    .Achievement {
+      // width: 60%;
+      // margin-left: 50%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      .Achievement-Headline {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        .Headline {
+          display: flex;
+          align-items: center;
+          width: unset;
+          img {
+            padding: 6px;
+            border-radius: 8px;
+            background-color: var(--primaryColor);
+          }
+          .Content-Title {
+            margin-left: 8rem;
+            .Content-Title__Number {
+              font-weight: 600;
+              line-height: 2.4rem;
+            }
+            .Content-Title__Caption {
+              font-weight: 600;
+              font-size: 1.8rem;
+              line-height: 2.4rem;
+              margin-left: 2.4rem;
+              color: #232340;
+            }
+          }
+        }
+        .Content__Text {
+          text-align: left;
+          font-weight: 700;
+          font-size: 3.2rem;
+          line-height: 4rem;
+          /* or 125% */
+          color: #000;
+          letter-spacing: -0.5px;
+        }
+      }
+      .Number {
+        padding-left: 0;
+        .Number__head {
+          color: var(--primaryColor);
+          line-height: 24rem;
+        }
+        .Number__content {
+          color: var(--black);
+        }
+      }
+    }
+  }
 }
 
 /* Responsive */
 @media (min-width: 1025px) and (max-width: 1250px) {
-    .Services .Services__Achievement .ImgPhone {
-        margin-left: -6rem;
-    }
+  .Services .Services__Achievement .ImgPhone {
+    margin-left: -6rem;
+  }
 }
 /*Tablet*/
-@media (min-width: 850px) and  (max-width: 1024px) {
-    .Services {
-        .Services__Achievement {
-            .ImgPhone {
-                width: 130%;
-                margin-left: -13rem;
-                margin-bottom: 5rem;
-            }
-        }
-    }
+@media (min-width: 850px) and (max-width: 1024px) {
+  .Services .Services__Achievement .ImgPhone {
+    width: 130%;
+    margin-left: -13rem;
+    margin-bottom: 5rem;
+  }
 }
 
-@media (min-width: 740px) and  (max-width: 849px) {
-    .Services .Services__Achievement .ImgPhone {
-        margin-left: -6rem;
-    }
+@media (min-width: 740px) and (max-width: 849px) {
+  .Services .Services__Achievement .ImgPhone {
+    margin-left: -6rem;
+  }
 }
 /*Mobile*/
 @media (min-width: 0) and (max-width: 739px) {
-    .Services {
-        .LeftArrow {
-            display: none;
-        }
-        .Services__Cards {
-            .Services__Card {
-                display: none;
-            }
-        }
-        .Services__Card.content {
-            display: block;
-            position: unset;
-            flex-direction: column;
-            background-color: unset;
-            border: unset;
-            border-radius: unset;
-            box-shadow: unset;
-            .Services__Card_Box, .Services__Card__Current {
-                flex: unset;
-                height: 190px;
-                width: 100%;
-                display: flex;
-                flex-direction: row;
-                justify-content: space-around;
-                align-items: center;
-                margin: 12px 0;
-                border-radius: 32px;
-                box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
-                .Services__Card__name {
-                    font-weight: 600;
-                    font-size: 18px;
-                    line-height: 24px;
-                    margin: 0;
-                }
-            }
-        }
-        .Services__Achievement {
-            margin-top: 80px;
-            flex-direction: column-reverse;
-            background-size: 80%;
-            background-position: bottom center;
-            .Services__Achievement__content .Achievement__Headline .Achievement__Headline__Head {
-                img {
-                   display: none;
-               }
-               .Headline__content__tagline {
-                margin: 0;
-               }
-            }
-            .Number {
-                padding: 0;
-            }
-            .ImgPhone {
-                width: 115%;
-                margin: 0;
-                margin-bottom: -10%;
-            }
-        }
+  .Services {
+    .LeftArrow {
+      display: none;
     }
+    .Services__Cards {
+      .Card {
+        display: none;
+      }
+    }
+    .Card.content {
+      display: block;
+      position: unset;
+      flex-direction: column;
+      background-color: unset;
+      border: unset;
+      border-radius: unset;
+      box-shadow: unset;
+      .Card__Box,
+      .Card__Current {
+        flex: unset;
+        height: 190px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        margin: 12px 0;
+        border-radius: 32px;
+        box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+        .Card__name {
+          font-weight: 600;
+          font-size: 18px;
+          line-height: 24px;
+          margin: 0;
+        }
+      }
+    }
+    .Services__Achievement {
+      margin-top: 80px;
+      flex-direction: column-reverse;
+      background-size: 80%;
+      background-position: bottom center;
+      .Achievement {
+        .Achievement-Headline {
+          .Headline {
+            img {
+              display: none;
+            }
+            .Content-Title {
+              margin: 0;
+            }
+          }
+        }
+        .Number {
+          padding: 0;
+        }
+      }
+      .ImgPhone {
+        width: 115%;
+        margin: 0;
+        margin-bottom: -10%;
+      }
+    }
+  }
 }
