--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -4,21 +4,17 @@
 :root {
   --white: #fff;
   --colorText: #8b8b8b;
-  --heightHeader: 1024px;
-  --heightWhoWeAre: 1710px;
   --distancePrimary: 13.5rem;
   --black: #000;
-  --heightServices: 2124px;
   --primaryColor: #5468e7;
-  --heightWorks: 3232px;
-  --heightCTA: 976px;
 }
 
 * {
   box-sizing: inherit;
 }
 
-/*Variable font size and line height text*/
+/* Variable font size and line height text */
+
 $fontSize: 1.8rem;
 $lineHeight: 1.4rem;
 
@@ -33,15 +29,14 @@ body {
   font-family: 'SF Pro Display', sans-serif;
   font-size: $fontSize;
   line-height: $lineHeight;
-  text-rendering: optimizeSpeed;
+  text-rendering: optimizespeed;
   text-align: center;
 }
 
 .button--primary {
   width: 18rem;
   height: 6.4rem;
-  /* color/dark */
-  border: 0px;
+  border: 0;
   background: var(--primaryColor);
   border-radius: 8px;
 
@@ -49,24 +44,27 @@ body {
     background: #7483e5;
     cursor: pointer;
   }
+
   .Recent-Works {
     font-weight: bold;
     left: 24.44%;
     right: 24.44%;
-    color: #ffffff;
+    color: #fff;
     font-size: 1.8rem;
   }
 }
 
 .Number {
   padding: 8rem;
+
   .Number__head {
     margin: 0;
     font-size: 20rem;
     line-height: 18rem;
     text-align: center;
-    color: #ffffff;
+    color: #fff;
   }
+
   .Number__content {
     margin: 0;
     font-size: 2.4rem;
@@ -75,7 +73,7 @@ body {
     font-weight: 700;
     text-align: center;
     letter-spacing: -0.2px;
-    color: #ffffff;
+    color: #fff;
   }
 }
 
@@ -85,6 +83,7 @@ body {
   display: flex;
   justify-content: space-between;
   padding-top: 12.8rem;
+
   .Headline__logo {
     padding: 6px;
     width: auto;
@@ -95,6 +94,7 @@ body {
     background-color: var(--primaryColor);
     border-radius: 8px;
   }
+
   .Content {
     display: flex;
     flex-direction: column;
@@ -106,33 +106,34 @@ body {
       font-style: normal;
       margin-bottom: 2.4rem;
       color: var(--primaryColor);
+
       .Content-Title__Caption {
         margin-left: 2.4rem;
       }
     }
+
     .Content__Text {
       font-weight: 700;
       font-size: 6.4rem;
       line-height: 7.2rem;
-      /* or 112% */
       margin: 0;
       letter-spacing: -0.5px;
-
-      /* color/white */
-
-      color: #ffffff;
+      color: #fff;
       width: 66rem;
       text-align: left;
     }
   }
+
   .Arrow-Btn__Box {
     margin-top: 5.4rem;
+
     img {
       width: auto;
       height: auto;
       top: 0;
       left: 0;
     }
+
     &:hover {
       cursor: pointer;
     }
@@ -140,35 +141,39 @@ body {
 }
 
 /* Responsive */
+
 $widthContainerDesktop: 1170px;
+
 .grid {
   width: 100%;
   max-width: $widthContainerDesktop;
   margin: 0 auto;
 }
-/*Declare Variable for responsive*/
+
+/* Declare Variable for responsive */
 
 $widthContainerMiniDesktop: 1000px;
 $widthContainerTablet: 811px;
 $widthContainerMiniTablet: 700px;
 $widthContainerMobile: 311px;
-
 $MaxWidthMiniDesktop: 1250px;
 $MaxWidthTablet: 1024px;
 $MaxWidthMiniTablet: 849px;
 $MaxWidthMobile: 739px;
 
-/*Mini Desktop*/
+/* Mini Desktop */
 @media (min-width: ($MaxWidthTablet + 1)) and (max-width: $MaxWidthMiniDesktop) {
   .grid {
     max-width: $widthContainerMiniDesktop;
   }
 }
-/*Tablet*/
+
+/* Tablet */
 @media (min-width: ($MaxWidthMiniTablet + 1)) and (max-width: $MaxWidthTablet) {
   html {
     font-size: 50%;
   }
+
   .grid {
     max-width: $widthContainerTablet;
   }
@@ -178,24 +183,30 @@ $MaxWidthMobile: 739px;
   html {
     font-size: 45%;
   }
+
   .grid {
     max-width: $widthContainerMiniTablet;
   }
 }
-/*Mobile*/
+
+/* Mobile */
 @media (min-width: 0) and (max-width: $MaxWidthMobile) {
   html {
     font-size: 45%;
   }
+
   .grid {
     max-width: $widthContainerMobile;
   }
+
   .Headline {
     flex-direction: column;
     align-items: flex-start;
+
     .Headline__logo {
       display: none;
     }
+
     .Content {
       .Content__Text {
         width: 80%;
@@ -203,22 +214,26 @@ $MaxWidthMobile: 739px;
         line-height: 48px;
       }
     }
+
     .Arrow-Btn {
       display: flex;
       justify-content: space-between;
       width: 100%;
       align-items: center;
       margin-top: 30px;
+
       .Arrow-Btn__Box {
         margin: unset;
       }
+
       .CurrentYearMobile {
         display: inline-block;
         font-weight: 600;
         font-size: 16px;
         line-height: 18px;
-        color: #ffffff;
+        color: #fff;
       }
+
       .DownIconMobile {
         display: inline-block;
       }
