--- a/src/components/Header/styleHeader.scss
+++ b/src/components/Header/styleHeader.scss
@@ -1,8 +1,7 @@
 .Header {
   width: 100%;
-  // height: var(--heightHeader);
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
   background-image: url('../../assets/images/HeaderBg.svg');
   padding-bottom: 25rem;
 
@@ -10,10 +9,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 6.4rem 7.2rem 0px;
+    padding: 6.4rem 7.2rem 0;
 
     .Nav__logo {
-      padding: 12px 0px;
+      padding: 12px 0;
     }
 
     .Navbar-menu {
@@ -29,6 +28,7 @@
         list-style: none;
         line-height: 2.5rem;
         padding: 1.5rem 3.2rem;
+
         &:hover {
           cursor: pointer;
         }
@@ -50,13 +50,16 @@
         background: linear-gradient(180deg, #3a8fff 0%, #0837ae 100%);
       }
     }
+
     .button-primary {
       background: #232340;
+
       &:hover {
         background: #3a3a64;
         cursor: pointer;
       }
     }
+
     .Nav__BurgerIcon {
       display: none;
     }
@@ -73,19 +76,23 @@
       top: 0;
       right: 0;
       width: 49%;
+
       img {
         width: 100%;
       }
     }
+
     .HeroImg {
       position: absolute;
       top: 8rem;
       right: 6rem;
       width: 61%;
+
       img {
         width: 100%;
       }
     }
+
     .HeroContent {
       width: 35%;
       display: flex;
@@ -107,6 +114,7 @@
           letter-spacing: -1px;
           color: #232340;
         }
+
         .HeroContent__para {
           width: 90%;
           text-align: start;
@@ -117,6 +125,7 @@
         }
       }
     }
+
     .ScrollDownIcon {
       position: absolute;
       bottom: -32%;
@@ -127,6 +136,7 @@
       object-fit: cover;
       display: flex;
       align-items: center;
+
       span {
         margin-left: 16px;
       }
@@ -135,79 +145,101 @@
 }
 
 /* Responsive */
-@media (min-width: 1025px) and (max-width: 1250px) {
+
+$MaxWidthMiniDesktop: 1250px;
+$MaxWidthTablet: 1024px;
+$MaxWidthMiniTablet: 849px;
+$MaxWidthMobile: 739px;
+
+/* Mini Desktop */
+@media (min-width: ($MaxWidthTablet + 1)) and (max-width: $MaxWidthMiniDesktop) {
   .Header .Header-Container .ScrollDownIcon {
     bottom: -19%;
   }
 }
-/*Tablet*/
-@media (min-width: 850px) and (max-width: 1024px) {
+
+/* Tablet */
+@media (min-width: ($MaxWidthMiniTablet + 1)) and (max-width: $MaxWidthTablet) {
   .Header {
     .Header-Container {
       .HeroBG {
         width: 52%;
       }
+
       .HeroImg {
         width: 64%;
       }
+
       .HeroContent {
         width: 40%;
+
         .HeroContent-main {
           .HeroContent__para {
             width: 80%;
           }
         }
       }
+
       .ScrollDownIcon {
         bottom: -23%;
       }
     }
   }
 }
-/*Mobile*/
-@media (min-width: 0) and (max-width: 739px) {
+
+/* Mobile */
+@media (min-width: 0) and (max-width: $MaxWidthMobile) {
   .Header {
     padding-bottom: 85%;
     margin-bottom: 64px;
     position: relative;
     overflow-x: hidden;
+
     .Navigation {
-      padding: 52px 32px 0px;
-      // position: fixed;
+      padding: 52px 32px 0;
+
       .Navbar-menu,
       .button--primary {
         display: none;
       }
+
       .Nav__BurgerIcon {
         display: block;
       }
     }
+
     .Header-Container {
       margin-top: 44px;
       position: unset;
+
       .HeroContent {
         z-index: 1;
         width: 100%;
+
         .HeroContent-main {
           .HeroContent__title {
             font-size: 7.4rem;
             line-height: 8rem;
           }
+
           .HeroContent__para {
             width: 75%;
             margin: 24px 0;
           }
         }
       }
+
       .ScrollDownIcon {
         display: none;
       }
+
       .HeroBG {
         top: unset;
         bottom: 0;
         width: 76%;
         right: -18%;
       }
+
       .HeroImg {
         top: unset;
         bottom: 6%;
