--- a/src/components/Services/styleServices.scss
+++ b/src/components/Services/styleServices.scss
@@ -1,17 +1,17 @@
 .Services {
   width: 100%;
-  // height: var(--heightServices);
   background-color: var(--white);
   background-image: url('../../assets/images/ServicesBg.svg');
-  background-color: linear-gradient(360deg, rgba(255, 255, 255, 0.0001) 0%, rgba(237, 229, 240, 0.504289), 100%);
   background-repeat: no-repeat;
   padding-bottom: 20rem;
+
   .Headline {
     .Content {
       .Content-Title,
       .Content-Title__Caption {
         color: var(--primaryColor);
       }
+
       .Content__Text {
         color: #232340;
       }
@@ -29,9 +29,9 @@
   .Card {
     display: flex;
     background-color: var(--white);
-    border: 3px solid #ffffff;
+    border: 3px solid #fff;
     border-radius: 48px;
-    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 10%);
     justify-content: space-around;
     margin-top: 14rem;
 
@@ -41,6 +41,7 @@
       left: 0;
       width: 100%;
       margin-top: 0;
+
       .Card__Box,
       .Card__Current {
         display: flex;
@@ -48,29 +49,32 @@
         align-items: center;
         justify-content: center;
       }
+
+      .Card__Box {
+        flex: 1;
+        height: 480px;
+        flex-direction: column;
+        border-radius: 48px;
+        background-color: var(--white);
+
+        .Card__name {
+          margin: 0;
+          margin-top: 4rem;
+          display: block;
+          color: var(--primaryColor);
+        }
+
+        &:hover:not(.Card__Current) {
+          cursor: pointer;
+          background-color: #838fdd;
+        }
+      }
     }
 
-    .Card__Box {
-      flex: 1;
-      height: 480px;
-      flex-direction: column;
-      border-radius: 48px;
-      background-color: var(--white);
-
-      .Card__name {
-        margin: 0;
-        margin-top: 4rem;
-        display: block;
-        color: var(--primaryColor);
-      }
-      &:hover:not(.Card__Current) {
-        cursor: pointer;
-        background-color: #838fdd;
-      }
-    }
     .Card__Box--active {
       position: relative;
       box-sizing: content-box;
+
       .Card__Current {
         z-index: 1;
         width: calc(100% + 4rem);
@@ -80,39 +84,42 @@
         border-radius: 48px;
         background: var(--primaryColor);
         text-align: center;
+
         .Card__name {
           margin: 0;
           margin-top: 3.3rem;
-          color: #ffffff;
+          color: #fff;
         }
       }
     }
   }
+
   .Services__Achievement {
     width: 100%;
     background-image: url('../../assets/images/Oval.svg');
     background-repeat: no-repeat;
     background-position: center left;
     background-size: 40%;
-    // background-position-x: 10rem;
     margin-top: 29rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     .ImgPhone {
       width: 85%;
       margin-left: -10rem;
       margin-bottom: 5rem;
+
       img {
         width: 100%;
       }
     }
+
     .Achievement {
-      // width: 60%;
-      // margin-left: 50%;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+
       .Achievement-Headline {
         position: relative;
         display: flex;
@@ -123,17 +130,21 @@
           display: flex;
           align-items: center;
           width: unset;
+
           img {
             padding: 6px;
             border-radius: 8px;
             background-color: var(--primaryColor);
           }
+
           .Content-Title {
             margin-left: 8rem;
+
             .Content-Title__Number {
               font-weight: 600;
               line-height: 2.4rem;
             }
+
             .Content-Title__Caption {
               font-weight: 600;
               font-size: 1.8rem;
@@ -143,22 +154,25 @@
             }
           }
         }
+
         .Content__Text {
           text-align: left;
           font-weight: 700;
           font-size: 3.2rem;
           line-height: 4rem;
-          /* or 125% */
           color: #000;
           letter-spacing: -0.5px;
         }
       }
+
       .Number {
         padding-left: 0;
+
         .Number__head {
           color: var(--primaryColor);
           line-height: 24rem;
         }
+
         .Number__content {
           color: var(--black);
         }
@@ -168,13 +182,21 @@
 }
 
 /* Responsive */
-@media (min-width: 1025px) and (max-width: 1250px) {
+
+$MaxWidthMiniDesktop: 1250px;
+$MaxWidthTablet: 1024px;
+$MaxWidthMiniTablet: 849px;
+$MaxWidthMobile: 739px;
+
+/* Mini Desktop */
+@media (min-width: ($MaxWidthTablet + 1)) and (max-width: $MaxWidthMiniDesktop) {
   .Services .Services__Achievement .ImgPhone {
     margin-left: -6rem;
   }
 }
-/*Tablet*/
-@media (min-width: 850px) and (max-width: 1024px) {
+
+/* Tablet */
+@media (min-width: ($MaxWidthMiniTablet + 1)) and (max-width: $MaxWidthTablet) {
   .Services .Services__Achievement .ImgPhone {
     width: 130%;
     margin-left: -13rem;
@@ -182,22 +204,25 @@
   }
 }
 
-@media (min-width: 740px) and (max-width: 849px) {
+@media (min-width: ($MaxWidthMobile + 1)) and (max-width: $MaxWidthMiniTablet) {
   .Services .Services__Achievement .ImgPhone {
     margin-left: -6rem;
   }
 }
-/*Mobile*/
-@media (min-width: 0) and (max-width: 739px) {
+
+/* Mobile */
+@media (min-width: 0) and (max-width: $MaxWidthMobile) {
   .Services {
     .LeftArrow {
       display: none;
     }
+
     .Services__Cards {
       .Card {
         display: none;
       }
     }
+
     .Card.content {
       display: block;
       position: unset;
@@ -206,6 +231,7 @@
       border: unset;
       border-radius: unset;
       box-shadow: unset;
+
       .Card__Box,
       .Card__Current {
         flex: unset;
@@ -217,7 +243,8 @@
         align-items: center;
         margin: 12px 0;
         border-radius: 32px;
-        box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+        box-shadow: 1px 1px 5px rgba(0, 0, 0, 10%);
+
         .Card__name {
           font-weight: 600;
           font-size: 18px;
@@ -226,26 +253,31 @@
         }
       }
     }
+
     .Services__Achievement {
       margin-top: 80px;
       flex-direction: column-reverse;
       background-size: 80%;
       background-position: bottom center;
+
       .Achievement {
         .Achievement-Headline {
           .Headline {
             img {
               display: none;
             }
+
             .Content-Title {
               margin: 0;
             }
           }
         }
+
         .Number {
           padding: 0;
         }
       }
+
       .ImgPhone {
         width: 115%;
         margin: 0;
